--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An application for the Coder Camps FullStack JS course",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -15,7 +15,11 @@
     "express-jwt": "^3.1.0",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.4",
+    "nodemailer": "^1.8.0",
+    "nodemailer-wellknown": "^0.1.7",
     "passport": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^2.0.1",
+    "xoauth2": "^1.1.0"
   }
 }
