--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "crypto": "0.0.3",
+    "dotenv": "^1.2.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-jwt": "^3.1.0",
+    "express-session": "^1.12.1",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.4",
     "passport": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-facebook": "^2.0.0",
+    "passport-linkedin": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth1": "^1.0.1",
+    "passport-oauth2": "^1.1.2"
   }
 }
