--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "~3.3.5",
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15",
-    "angular-material": "~0.11.4"
+    "angular-material": "~0.11.4",
+    "angular-bootstrap": "~0.14.3"
   }
 }
