--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "async": "^1.5.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "crypto": "0.0.3",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-jwt": "^3.1.0",
+    "express-session": "^1.12.1",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.4",
     "nodemailer": "^1.8.0",
