--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "activator": "^1.0.3",
     "async": "^1.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
@@ -15,11 +16,13 @@
     "dotenv": "^1.2.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "express-flash": "0.0.2",
     "express-jwt": "^3.1.0",
     "express-session": "^1.12.1",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.4",
-    "nodemailer": "^1.8.0",
+    "nodemailer": "^0.7.1",
+    "nodemailer-smtp-transport": "^1.0.4",
     "nodemailer-wellknown": "^0.1.7",
     "passport": "^0.3.0",
     "passport-linkedin": "^1.0.0",
