--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.13.3",
     "express-jwt": "^3.1.0",
     "express-session": "^1.12.1",
+    "filepicker-js": "^2.2.1",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.4",
     "nodemailer": "^1.8.0",
