--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer-wellknown": "^0.1.7",
     "passport": "^0.3.0",
     "passport-linkedin": "^1.0.0",
+    "passport-linkedin-token": "^0.1.1",
     "passport-local": "^1.0.0",
     "passport-oauth1": "^1.0.1",
     "passport-oauth2": "^1.1.2",
