--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^1.8.0",
     "nodemailer-wellknown": "^0.1.7",
     "passport": "^0.3.0",
+    "passport-github": "^1.0.0",
     "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth1": "^1.0.1",
