--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer-smtp-transport": "^1.0.4",
     "nodemailer-wellknown": "^0.1.7",
     "passport": "^0.3.0",
+    "passport-facebook": "^2.0.0",
     "passport-github": "^1.0.0",
     "passport-linkedin": "^1.0.0",
     "passport-linkedin-token": "^0.1.1",
