--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth1": "^1.0.1",
     "passport-oauth2": "^1.1.2",
+    "passport-twitter": "^1.0.3",
     "pusher": "^1.0.6",
     "socket.io": "^1.3.7",
     "uuid": "^2.0.1",
