--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "angular-material": "~0.11.4",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "ngWig": "ng-wig#~2.2.1",
+    "angular-ui-tinymce": "~0.0.10"
   }
 }
