--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-bootstrap": "~0.14.3",
     "ngWig": "ng-wig#~2.2.1",
     "angular-ui-tinymce": "~0.0.10",
-    "angular-ui-notification": "~0.1.0"
+    "angular-ui-notification": "~0.1.0",
+    "angular-chart.js": "~0.8.5"
   }
 }
